tests/neg/i1648.scala
class Foo { Object[A] } // error
